# surgery_robotics_kuka_barrett

./: .gitignore  .gitmodules  README.md  REFERENCES.md  Vagrantfile
docs/: .buildinfo  genindex.html  index.html  install-instructions.html  objects.inv  references.html  requirements.html  search.html  searchindex.js  troubleshooting.html  usage.html
docs/.doctrees/: environment.pickle  index.doctree  install-instructions.doctree  references.doctree  requirements.doctree  troubleshooting.doctree  usage.doctree
docs/_sources/: index.rst.txt  install-instructions.rst.txt  references.rst.txt  requirements.rst.txt  troubleshooting.rst.txt  usage.rst.txt
docs/_sources/api/: index.rst.txt
docs/_sources/gazebo/: getting-started.rst.txt
docs/_sources/moveit/: introduction.rst.txt
docs/_sources/ros/: nodes.rst.txt  topics.rst.txt
docs/_sources/simulation/: robot.rst.txt  robot_planner3.rst.txt  running-experiments.rst.txt
docs/_static/kinematics_doc/: manifest.yaml
docs/api/: index.html
docs/gazebo/: getting-started.html
docs/kinematics/: moveit.html  trajectories.html
docs/moveit/: introduction.html
docs/ros/: nodes.html  tf.html  topics.html
docs/simulation/: getting-started.html  robot.html  robot_planner3.html  running-experiments.html
docs/vision/: detection.html  getting-started.html
docs_src/: Makefile  conf.py  index.rst  requirements.rst  usage.rst
docs_src/kinematics/: moveit.rst  trajectories.rst
docs_src/ros/: frames.gv  nodes.rst  tf.rst  topics.rst
docs_src/vision/: detection.rst  getting-started.rst
matlab/: b_spline.m  bezier_path.m  cubicInterpolation.m  cubic_interpolation_script.m  fulcrumEffectPath.m  fwdKinSym.m  kinematics.m  matlab.mat  rcm_arcs_traj.m  rcm_bezier_path.m  rcm_bezier_traj.m  rcm_circle_traj.m  rcm_cubic_traj.m  rcm_helix_traj.m  rcm_lineseg_path.m  rcm_robot_rand_circle_traj.m  rcm_robot_rand_circle_traj.mat  rcm_taskspace.m  show_robot_solutions.m  vel_profile.m  workspace_sampling.m  workspace_uniform.m
src/custom_math/: CMakeLists.txt  package.xml
src/custom_math/src/: Matrix.cpp  Scalar.cpp
src/iiwa_moveit_config/: .setup_assistant  package.xml
src/iiwa_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  kuka_barrett.srdf  ompl_planning.yaml  ros_controllers.yaml
src/iiwa_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  iiwa_planning_execution.launch  move_group.launch  moveit.rviz  ros_controllers.launch  sensor_manager.launch.xml
src/kinematics/: .gitignore  CMakeLists.txt  conf.py  index.rst  package.xml  rosdoc.yaml
src/kinematics/launch/: moveit_path.launch
src/kinematics/matlab/: fwdKinSym.m  invKinSym.m  kinematics.m  pose.m
src/kinematics/msg/: DesiredForwardKinematicsTrajectory.msg  KinematicState.msg
src/kinematics/src/: BarrettInv.cpp  DesiredForwardKinematicsTrajectoryNode.cpp  Iiwa14Inv.cpp  KinematicStateNode.cpp  Pose.cpp  TrajectoryExecution.cpp  Transformation.cpp  jacobian_node.cpp  utils.cpp
src/kuka_barrett/: CMakeLists.txt  package.xml
src/kuka_barrett/action/: ExecutePivotMotion.action  GoToToolHomePosition.action  (+3 more)
src/kuka_barrett_control/: CMakeLists.txt  controller_plugins.xml  package.xml
src/kuka_barrett_control/config/: barrett_control.yaml  kuka_computed_torque_controller.yaml  kuka_control.yaml
src/kuka_barrett_control/launch/: computed_torque_controller_test.launch  kuka_barrett_control.launch
src/kuka_barrett_control/perspectives/: kuka_barrett_computed_torque_controller.perspective
src/kuka_barrett_control/src/: ComputedTorqueControllerTest.cpp  kuka_barrett_teleop.cpp
src/kuka_barrett_gazebo/: package.xml
src/kuka_barrett_gazebo/launch/: kuka_barrett_gazebo.launch
src/kuka_barrett_gazebo/objects/mounting_dock/: model.config  model.sdf
src/kuka_barrett_gazebo/objects/mounting_dock/meshes/: mounting_dock.stl  mounting_dock_collision.stl  mounting_dock_old.stl
src/kuka_barrett_gazebo/objects/robot_base/: model.config  model.sdf
src/kuka_barrett_gazebo/objects/simple_object/: model.config  model.sdf
src/kuka_barrett_gazebo/objects/surgical_table/: model.config  model.sdf
src/kuka_barrett_gazebo/objects/surgical_table/meshes/: surgical_table.dae  surgical_table.stl
src/kuka_barrett_gazebo/objects/surgical_tool/: model.config  model.sdf
src/kuka_barrett_gazebo/objects/surgical_tool/meshes/: surgical-tool.dae  surgical_tool.stl  surgical_tool_collision.stl
src/kuka_barrett_gazebo/worlds/: or_world1.world  or_world2.world  or_world3.world
src/main/: CMakeLists.txt  package.xml
src/moveit_config/: .setup_assistant  package.xml
src/surgery_robotics_description/: CMakeLists.txt  package.xml
src/surgical_tools_description/: CMakeLists.txt  package.xml
src/taskspace/: CMakeLists.txt  package.xml  rcm_error_data.csv  rcm_error_data_4exp.csv
src/trajectory/: CMakeLists.txt  package.xml
src/vision/: CMakeLists.txt  README.md  package.xml
vrep/: iiwa_controller.lua  ik.py  kuka_iiwa14.ttt  planner2.py  target_controller.lua
(+131 files in other folders)
