<?xml version="1.0"?>
<package>
  <name>kuka_barrett_control</name>
  <version>0.1.0</version>
  <description>The kuka_barrett_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="karadalex@gmail.com">Alexios Karadimos</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  
  <run_depend>controller_interface</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

   <export>
    <controller_interface plugin="${prefix}/controller_plugins.xml" />
  </export>
</package>
